--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-#  - name: Posts
-#    url: '#posts'
-#    weight: 20
+  - name: Resume
+    url: 'media/cv-hayashibara.pdf'
+    weight: 20
   - name: Experience
     url: '#experience'
     weight: 30
@@ -17,7 +17,7 @@ main:
 #    url: '#talks'
 #    weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 50
 #  - name: Contact
 #    url: '#contact'
